<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_act_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/register_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="top"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.Hover.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.Hover.PopupOverlay">

        <RelativeLayout
            android:id="@+id/register_back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_view"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/lato_bold"
                android:text="@string/back"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_bold"
            android:text="@string/register"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryLight"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:padding="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_action_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                style="@style/Theme.Hover.Style.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_surname"
                style="@style/Theme.Hover.Style.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_marginTop="10dp"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_account"
                style="@style/Theme.Hover.Style.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_surname"
                android:layout_marginTop="10dp"
                android:hint="@string/email_hint"
                app:placeholderText="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primaryTextColor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_account"
                style="@style/Theme.Hover.Style.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_account"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:hint="@string/password_hint"
                app:passwordToggleDrawable="@drawable/ic_outline_remove_red_eye_24"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn"
                style="@style/Theme.Hover.Button.Rounded"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@id/password_account"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/color_button"
                android:fontFamily="@font/lato_bold"
                android:text="@string/register"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/goto_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_btn"
                android:layout_marginBottom="5dp"
                android:background="@color/transparent"
                android:fontFamily="@font/lato_bold"
                android:text="@string/existing_user"
                android:textColor="@color/colorAccent" />

            <RelativeLayout
                android:id="@+id/account_register_pb_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_view"
                android:elevation="8dp"
                android:padding="20dp">

                <ProgressBar
                    android:id="@+id/account_register_pb"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white" />

                <ImageView
                    android:id="@+id/account_done_Iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_baseline_done_anim" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>